--- a/src/styles/project/todos-add.scss
+++ b/src/styles/project/todos-add.scss
@@ -4,8 +4,10 @@
   border-bottom: 1px groove $color-border;
 }
 
-.todos-add {
-  @include clearfix();
+.todos-add:after {
+  content: '';
+  display: block;
+  clear: both;
 }
 
 .todos-add_select-all {
@@ -17,7 +19,6 @@
   margin: 0;
   float: left;
   position: relative;
-  outline: none;
 }
 
 .todos-add_select-all:focus {
@@ -25,13 +26,13 @@
 }
 
 .todos-add_select-all_icon {
-  width: $button_side_main_x2;
+  width: $button_side_main*2;
   height: $button_side_main;
-  background: url('../../images/icons/select-all.png') no-repeat 0 0;
+  background: url('../../../images/icons/select-all.png') no-repeat 0 0;
   position: absolute;
   left: 50%;
-  top: 50%;
-  margin: -$offset_low_2x -$offset_low_4x;
+  //top: 50%;
+  margin: $button_side_main/2*-1 $button_side_main*-1;
 }
 
 .todos-add_item-w {
