--- a/src/styles/project/todos-list.scss
+++ b/src/styles/project/todos-list.scss
@@ -1,105 +1,92 @@
 @import "../config/globals";
 
 .todos-list {
-  border: none;
 }
 
-.todos-list_item {
-  border-bottom: 1px groove $color-border;
-  height: 64px;
-}
+    .todos-list_item {
+      border-bottom: 1px groove $color-border;
+      min-height: $button_side;
+      display: flex;
+      -webkit-box-align: center;
+      align-items: center;
+      @include clearfix();
+    }
 
-.todos-list_item:hover {
-  background: $color-border;
-}
+      .todos-list_item:hover{
+        background: $color-border;
+      }
 
-~ .todos-list_item_remove {
-  visibility: visible;
-}
+        .todos-list_item_checkbox {
+          width: $button_side;
+          height: $button_side;
+          float: left;
+          position: relative;
+          display: block;
+        }
 
-.todos-list_item_checkbox {
-  width: $button_side;
-  height: $button_side;
-  position: relative;
-  float: left;
-  border: #666666;
+            .todos-list_item_checkbox_target{
+              opacity: 0;
+              position: absolute;
+              top: 0;
+              left: 0;
+              width: 100%;
+              height: 100%;
+              z-index: 1;
+            }
 
-}
+            .todos-list_item_checkbox_visual{
+              width: 20px;
+              height: 20px;
+              position: relative;
+              border-radius: 50%;
+              margin: 21px 0 0 21px;
+              background: url('../../../images/icons/completed.png') no-repeat 0 0;
+              visibility: hidden;
+            }
 
-.todos-list_item_checkbox_target {
-  opacity: 0;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-}
+            .todos-list_item_checkbox_no_visual{
+              width: $button_side_main*3;
+              height: $button_side_main*3;
+              top: $button_side_main;
+              left: $button_side_main;
+              position: absolute;
+              border-radius: 50%;
+              border: 1px solid $c-gray-light;
+            }
 
-.todos-list_item_checkbox_no-visual {
-  border: 1px solid $c-gray-light;
-  border-radius: 50%;
-  width: $button_side_main*3;
-  height: $button_side_main*3;
-  position: absolute;
-  margin: $margin_normal 0 0 $margin_normal;
-}
+              .todos-list_item_checkbox_target:checked ~ .todos-list_item_checkbox_no_visual{
+                border-color: $color-border-checkbox;
+              }
 
-.todos-list_item_checkbox_visual {
-  width: $button_side_main*3;
-  height: $button_side_main*3;
-  position: absolute;
-  margin: $margin_normal 0 0 $margin_normal;
-  border: 1px solid $c-gray-light;
-  border-radius: 50%;
-  background: url('../../../images/icons/completed.png') no-repeat 8px 8px;
-  visibility: hidden;
-}
+              .todos-list_item_checkbox_target:checked ~ .todos-list_item_checkbox_visual{
+                visibility: visible;
+              }
 
-.todos-list_item_checkbox_target:checked ~ .todos-list_item_checkbox_visual {
-  visibility: visible;
-  border-color: $color-border-checkbox;
-  font-style: oblique;
-}
+        .todos-list_item_remove {
+          width: $button_side;
+          height: $button_side;
+          float: right;
+          position: relative;
+          order: 2;
+          display: block;
+          top: $button_side/3;
+          left: $button_side/3;
+          -webkit-box-ordinal-group: 2;
+          vertical-align: top;
+          border: none;
+          opacity: 0;
+          outline: none;
+          background: url('../../../images/icons/close.png') no-repeat 0 0;
+        }
 
-.todos-list_item_checkbox_target:checked ~ .todos-list_item_checkbox_no-visual {
-  border-color: $color-border-checkbox;
-}
+          .todos-list_item_remove:hover{
+            opacity: 1;
+          }
 
-.todos-list_item_remove {
-  width: $button_side;
-  height: $button_side;
-  border: none;
-  padding: 0;
-  margin: 0;
-  float: right;
-  //position: relative;
-  //outline: none;
-  visibility: hidden;
-  background: url('../../../images/icons/close.png') no-repeat 0 0;
-}
-
-.todos-list_item_remove_icon {
-  width: $button_side_main*1.5;
-  height: $button_side_main*1.5;
-  position: absolute;
-  margin: -$offset_low_3x 0 0 23px;
-}
-
-.todos-list_item_name {
-  height: $button_side;
-  overflow: hidden;
-  box-sizing: border-box;
-  display: inline-block;
-  border: none;
-  background: none;
-  resize: none;
-  color: $c-gray-dark;
-  font-size: $fs_large;
-  line-height: 20px;
-  font-weight: $fw_normal;
-  padding-right: $offset_low_4x;
-  margin-top: $offset_6x;
-  outline: none;
-  white-space: normal;
-}
+        .todos-list_item_name {
+          overflow: hidden;
+          -webkit-box-flex: 1;
+          flex: 1 0;
+          word-wrap: break-word;
+          display: block;
+        }
