--- a/src/styles/project/todos-title.scss
+++ b/src/styles/project/todos-title.scss
@@ -1,6 +1,6 @@
 @import "../config/globals";
 
-.todos-title {
+.todos-header-title {
   font-size: $fs_title;
   font-weight: $fw_little;
   color: $color-title;
