--- a/src/styles/config/globals.scss
+++ b/src/styles/config/globals.scss
@@ -1,6 +1,7 @@
 @import "vars/color";
+@import "vars/layout";
 @import "vars/font-size";
-@import "vars/text-size";
+@import "vars/offset";
+@import "vars/fonts";
+@import "mixin/clearfix";
 
-@import "mixins/clearfix";
-@import "mixins/null-margins-paddings";
