--- a/src/styles/project/todos-actions-bar.scss
+++ b/src/styles/project/todos-actions-bar.scss
@@ -1,73 +1,52 @@
 @import "../config/globals";
 
-$border-focus: 1px solid $color-focus;
-$border-no_focus: 1px solid $c-white;
-
-.todos-actions-bar {
-  height: 39px;
+.todos-actions_bar {
   overflow: hidden;
-  display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-//.todos-actions-bar:after {
-//  content: '';
-//  display: block;
-//  clear: both;
-//}
-
-.todos-actions-bar_counter {
+.todos-actions_bar-counter {
   box-sizing: border-box;
   border: 0;
   background: none;
   resize: none;
-  width: $offset_action-bar_counter;
   color: $c-gray;
-  line-height: $offset_high_4x;
-  font-weight: $fw_normal;
-  padding: 0 0 0 $offset_low_4x;
   outline: none;
-  margin-top: $offset_low_3x;
+  margin: $offset_low_4x;
   float: left;
 }
 
-.todos-actions-bar_clear {
-  //box-sizing: border-box;
+.todos-actions_bar-clear {
   border: 0;
   background: none;
   resize: none;
-  width: 116px;
-  margin-top: $offset_low_3x;
   color: $c-gray;
-  line-height: $offset_high_4x;
-  font-weight: $fw_normal;
-  padding: 0 $offset_low_4x 0 0;
+  margin: $offset_low_4x;
+  padding:0;
   outline: none;
   float: right;
+  cursor: pointer;
 }
 
-.todos-actions-bar_filter:focus {
-  border: $border-focus;
-  border-radius: 15%;
+.todos-actions_bar-filter:focus {
+  border: 2px solid $color-focus;
 }
 
-.todos-actions-bar_filters {
-  //position: relative;
+.todos-actions_bar-filters {
   align-items: center;
   justify-content: space-between;
   display: flex;
-
 }
 
-.todos-actions-bar_filter {
+.todos-actions_bar-filter {
   outline: none;
-  //position: relative;
   color: $c-gray;
   background: none;
-  border: $border-no_focus;
-  padding-bottom: 0;
-  margin: $offset_high*2 0 0 10%;
+  border: 2px solid $c-white;
+  margin: $offset_low_4x;
+  padding: 0;
   align-items: center;
-
+  border-radius: 8px;
+  cursor: pointer;
 }
